[gd_scene load_steps=3 format=3 uid="uid://ca8sy74sc1cng"]

[ext_resource type="Script" uid="uid://bbiyajc5t53l5" path="res://scenes/craft/craft_delete_button.gd" id="1_k4dkm"]
[ext_resource type="Texture2D" uid="uid://boftldjgsctgl" path="res://assets/ui/ui_backpack_delete.png" id="2_5nvs6"]

[node name="CraftDeleteButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4dkm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.12, 1.12)
texture = ExtResource("2_5nvs6")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
